refactor: 리팩토링
- 필드 및 메서드명을 수정할 때 도메인 용어를 사용하여 이해하기 쉽도록 함
- 반복문을 stream으로 수정하여 가독성 높임
- 내부 값을 바로 반환하기보다 값 객체를 반환하도록 함
- 같은 패키지의 클래스에서 사용하는 메서드는 default 접근제어자로 둠
- 의미를 나타내지 않고 재사용이 되지 않는 상수 제거